# pdflog

./: .baw  CHANGELOG.md  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: index.rst
pdfinfo/: __init__.py  cli.py  meta.py  reader.py
pdflog/: __init__.py  cli.py  data.py  info.py  meta.py  pages.py  reader.py  version.py
tests/: __init__.py  conftest.py  test_badguy.py  test_cli.py  test_data.py  test_info.py  test_meta.py  test_pages.py  test_regression.py  test_version.py
